--- a/Res/css/st.css
+++ b/Res/css/st.css
@@ -1,5 +1,21 @@
+.main-header .header-top .top-right .top-nav li {
+	margin-left: 5px;
+	float: left;
+}
+
+.main-header .header-top .top-right .top-nav li a {
+	padding-left: 5px;
+}
+
+.full-height{
+	height: 100vh !important;
+}
+
+.absolute{
+	position: absolute !important;
+}
+
 .back{
-	height: 100vh;
 	background-image:url(../images/15.jpg);
 	background-size: cover;
 	overflow-x: hidden;
@@ -7,12 +23,7 @@
 	width:100%;
 }
 
-.page-wrapper{
-	margin-bottom: 100px;
-}
-
 .main-footer {
-	position: fixed;
 	right: 0;
 	left: 0;
 	bottom: 0;
