--- a/Res/css/st.css
+++ b/Res/css/st.css
@@ -1,11 +1,15 @@
 .main-header .header-top .top-right .top-nav li {
 	margin-left: 5px;
-	float: left;
+	
+
 }
 
 .main-header .header-top .top-right .top-nav li a {
 	padding-left: 5px;
+	padding-right: 7px;
+	border-left:1px solid #ff7f17;
 }
+
 
 .full-height{
 	height: 100vh !important;
@@ -15,19 +19,16 @@
 	position: absolute !important;
 }
 
+
 .back{
+
 	background-image:url(../images/15.jpg);
-	background-size: cover;
 	overflow-x: hidden;
 	background-repeat: no-repeat;
 	width:100%;
 }
 
-.main-footer {
-	right: 0;
-	left: 0;
-	bottom: 0;
-}
+
 
 .popover-content{
 	width: 150px;
@@ -36,6 +37,31 @@
 }
 
 
+.main-footer {
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
+
+
 .popover{
 	background-color: #2b2b2b;
 }
+
+
+.btn-style-one:hover{
+	background: #ff8432;
+	color:white !important;
+}
+
+.default-form .form-group .group-inner:focus{
+	border-color: #ff7f17;
+}
+
+
+
+
+
+
+
