--- a/Res/css/st.css
+++ b/Res/css/st.css
@@ -77,16 +77,33 @@
 }
 
 input[type="radio" i] {
-    margin: 2px;
+    margin-right:15px;
+    /* Double-sized Checkboxes */
+  -ms-transform: scale(1.3); /* IE */
+  -moz-transform: scale(1.3); /* FF */
+  -webkit-transform: scale(1.3); /* Safari and Chrome */
+  -o-transform: scale(1.3); /* Opera */
+  padding: 10px;
+
+    
+}
+
+
+input[type=checkbox]
+{
+  /* Double-sized Checkboxes */
+  -ms-transform: scale(1.5); /* IE */
+  -moz-transform: scale(1.5); /* FF */
+  -webkit-transform: scale(1.5); /* Safari and Chrome */
+  -o-transform: scale(1.5); /* Opera */
+  padding: 10px;
 }
 
 
 
 .preference{
-	background-color: rgba(255, 132, 50, 0.78);
-    width: 60%;
-    text-align: center;
-    color: white;
+	text-align: left;
+    
 }
 
 
@@ -95,5 +112,24 @@ input[type="radio" i] {
 }
 
 
+.country-div{
+	padding-top: 10px;
+    margin-bottom: -12px;
+}
+
+.checkb input {
+		margin-right:10px;
+
+}
+
+.main-div{
+
+	padding-top: 18px;
+}
+
+
+.line-gap{
+	margin-top: 5px;
+}
 
 
