--- a/Res/css/st.css
+++ b/Res/css/st.css
@@ -157,3 +157,69 @@ input[type=checkbox]
 	font-weight: 700;
 	margin-bottom: 30px;
 }
+
+
+.header-upper .top-right{
+	position:relative;
+	float:right;
+	padding:14px 0px;
+	line-height:24px;
+}
+
+.header-upper.style-two .top-right{
+	padding:0px;
+}
+
+.header-upper .top-right .top-nav li{
+	position:relative;
+	float:left;
+	margin-left:12px;
+	line-height:24px;
+	--color:#e3e3e3;
+}
+
+.header-upper .top-right .top-nav li a{
+	position:relative;
+	display:block;
+	padding-left:12px;
+	line-height:1em;
+	--color:#dddddd;
+	font-size:17px;
+	font-weight:300;
+	border-left:1px solid #3e3e3e;
+	transition:all 500ms ease;
+	-moz-transition:all 500ms ease;
+	-webkit-transition:all 500ms ease;
+	-ms-transition:all 500ms ease;
+	-o-transition:all 500ms ease;
+}
+
+.header-upper .top-right .top-nav li a:hover{
+	color:#ff7f17;	
+}
+
+.header-upper .top-right .top-nav li:first-child a{
+	border-left:0px;
+}
+
+.header-upper .top-right .top-nav li a {
+    border-left: 1px solid #ff7f17;
+}
+
+@media only screen and (max-width: 767px){
+	.header-upper .top-right {
+	    width: 100%;
+	    padding: 0px;
+	    padding-bottom: 14px;
+	}
+	.header-upper {
+		text-align: center;
+	}
+}
+
+@media only screen and (max-width: 767px){
+	.header-upper .top-right ul li, .header-upper .top-right .top-nav li {
+	    display: inline-block;
+	    float: none;
+	}
+}
