--- a/Res/css/style.css
+++ b/Res/css/style.css
@@ -340,7 +340,7 @@ img{
 	position:relative;
 	font-size:14px;
 	color:#ffffff;
-	background:#2b2b2b;
+	--background:#2b2b2b;
 }
 
 .main-header .header-top.style-two{
@@ -417,7 +417,7 @@ img{
 	float:left;
 	margin-left:12px;
 	line-height:24px;
-	color:#e3e3e3;
+	--color:#e3e3e3;
 }
 
 .main-header .header-top .top-right .top-nav li a{
@@ -425,7 +425,7 @@ img{
 	display:block;
 	padding-left:12px;
 	line-height:1em;
-	color:#dddddd;
+	--color:#dddddd;
 	font-size:17px;
 	font-weight:300;
 	border-left:1px solid #3e3e3e;
