--- a/Views/Client/evaluation.html
+++ b/Views/Client/evaluation.html
@@ -44,8 +44,8 @@
                     <!--Top Right-->
                     <div class="top-right">
                         <ul class="top-nav clearfix">
-                            <li><a href="signIn.html" style="margin-top: 7px;">Sign In</a></li>
-                            <li><a href="signup.html" style="margin-top: 7px;">Sign Up</a></li>
+                            <li><a href="../signIn.html" style="margin-top: 7px;">Sign In</a></li>
+                            <li><a href="../signup.html" style="margin-top: 7px;">Sign Up</a></li>
                             <!--li><a href="#" style="margin-top: 7px;">Privacy</a></li-->
                             <li><a href="#" style="margin-top: 7px;">Support</a></li>
                         </ul>
