--- a/Views/index.html
+++ b/Views/index.html
@@ -212,7 +212,7 @@
                     data-elementdelay="0.01"
                     data-endelementdelay="0.3"
                     data-endspeed="1200"
-                    data-endeasing="Power4.easeIn"><a href="about-us.html" class="theme-btn btn-style-one">Learn More</a> &ensp; <a href="contact.html" class="theme-btn btn-style-two">Contact Us</a></div>
+                    data-endeasing="Power4.easeIn"></div>
                     
                     
                     </li>
@@ -257,7 +257,7 @@
                     data-elementdelay="0.01"
                     data-endelementdelay="0.3"
                     data-endspeed="1200"
-                    data-endeasing="Power4.easeIn"><a href="about-us.html" class="theme-btn btn-style-one">Learn More</a> &ensp; <a href="contact.html" class="theme-btn btn-style-two">Contact Us</a></div>
+                    data-endeasing="Power4.easeIn"></div>
                     
                     </li>
                     
